vertx-mqtt-it/mqtt-broker/src/main/fabric8/http-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${project.artifactId}
spec:
  selector:
    app: ${project.artifactId}
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
