vertx-mqtt-it/mqtt-broker/src/main/fabric8/mqtt-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-service
spec:
  ports:
  - name: mqtt
    port: 1883
    protocol: TCP
    targetPort: 1883
  selector:
    app:  ${project.artifactId}
